WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26735
[Chromium] Fix V8IsolatedWorld to point to the correct include file.
https://bugs.webkit.org/show_bug.cgi?id=26735
Summary
[Chromium] Fix V8IsolatedWorld to point to the correct include file.
Adam Langley
Reported
2009-06-25 15:03:17 PDT
The deprecated v8_index.h was removed from the Chromium tree in
r19291
and upstreamed into WebKit with
r45193
. However V8IsolatedWorld slipped in between the cracks and broke the build.
Attachments
patch
(1.16 KB, patch)
2009-06-25 15:04 PDT
,
Adam Langley
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Langley
Comment 1
2009-06-25 15:04:35 PDT
Created
attachment 31879
[details]
patch
Nate Chapin
Comment 2
2009-06-25 15:08:32 PDT
Can't review, but as the one who landed the break, LGTM.
Eric Seidel (no email)
Comment 3
2009-06-25 15:13:07 PDT
Comment on
attachment 31879
[details]
patch LGTM.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug