2009-06-25  Adam Langley  <agl@google.com>

TBRed: fix for Chromium tree.

        https://bugs.webkit.org/show_bug.cgi?id=26735

        Fix V8IsolatedWorld to point to the correct include file.

        The deprecated v8_index.h was removed from the Chromium tree in r19291
        and upstreamed into WebKit with r45193. However V8IsolatedWorld
        slipped in between the cracks and broke the build.

        * bindings/v8/V8IsolatedWorld.h: update with new header location.


Canonical link: https://commits.webkit.org/36915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45201 268f45cc-cd09-0410-ab3c-d52691b4dbfc